change background color

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
     /* background-position: center center; */
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: var(--violet);
+    background-color: var(--magenta);
 
 }
 
