--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
     width:90%;
     margin:auto;
     max-width:1200px;
-    padding:20px;
+    padding:20px 0;
 }
 
 section{
@@ -104,9 +104,15 @@ button{
 }
 
 @media screen and (max-width:850px){
+    .container{
+        width:100%;
+        padding:20px 10px;
+    }
+    
    .logo img{
-      max-width:100%;
+      max-width:80%;
    }
+
     section{
         flex-direction: column;
         align-items: center;
