fix margin bag on image and change bg color

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
     /* background-position: center center; */
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: var(--magenta);
+    background-color: var(--violet);
 
 }
 
@@ -35,7 +35,6 @@ section{
 }
 
 section > div:first-child{
-    width:100%;
     flex-basis:60%;
     margin-right:10px;
     /* background-color: red; */
@@ -108,7 +107,7 @@ button{
         width:100%;
         padding:20px 10px;
     }
-    
+
    .logo img{
       max-width:80%;
    }
@@ -118,12 +117,21 @@ button{
         align-items: center;
         margin-top:60px;
     }
+    section  div:first-child{
+        margin:0px;
+    }
     section  div:last-child{
         text-align: center;
         margin:50px 0px;
     }
+    section  div:last-child h1{
+        font-size: 2.4rem;
+    }
     section  div:last-child p{
         font-size: 1.4rem;
+    }
+    section  div:last-child button{
+        font-size: 1.2rem;
     }
     .social-icons{
         justify-content: center;
